--- a/pages/cart/cart.css
+++ b/pages/cart/cart.css
@@ -5,7 +5,7 @@
     grid-template-columns: auto auto;
     grid-template-rows: repeat(3, auto);
     grid-gap: 1rem;
-    margin: 3rem 9rem 0 9rem;
+    margin: 3rem 4rem 0 4rem;
 }
 
 .cart-heading {
@@ -81,4 +81,34 @@
 .place-order>button {
     margin-top: 0.5rem;
     width: 100%;
+}
+
+
+@media only screen and (max-width: 860px){
+    .card-horizontal{
+        flex-direction: column;
+    }
+
+    .cart-items{
+        margin:3rem 0rem 1rem ;
+        justify-items: center;
+    }
+
+    .cart-checkout{
+        width:15rem;
+    }
+}
+
+
+@media only screen and (max-width: 540px){
+
+    .cart-items{
+        grid-template-columns: 1fr;
+        justify-items: center;
+        margin-top: 2rem;
+    }
+
+    .cart-checkout{
+        width:20rem;
+    }
 }
