--- a/pages/login/login.css
+++ b/pages/login/login.css
@@ -75,3 +75,25 @@ main {
 .message {
     display: none;
 }
+
+
+@media only screen and (max-width: 540px) {
+
+    .login-section {
+        padding: 2rem 0rem;
+    }
+
+}
+
+@media only screen and (max-width: 390px) {
+
+    .login-section {
+        width: 90%;
+    }
+
+    .options-box {
+        text-align: center;
+        font-size: 80%;
+    }
+
+}
