--- a/css/general.css
+++ b/css/general.css
@@ -57,7 +57,7 @@ body {
 @media only screen and (max-width: 860px){
 
     .navbar {
-        padding: 0.5rem 0.5rem;
+        padding: 0.5rem;
         justify-content: space-evenly;
     }
 
